--- a/exchange1/dockerfile
+++ b/exchange1/dockerfile
@@ -3,11 +3,11 @@ ARG ALPINE_VER=3.12
 
 FROM golang:${GO_VER}-alpine${ALPINE_VER}
 
-WORKDIR /go/src/github.com/hyperledger/fabric-samples/asset-transfer-basic/chaincode-external
+WORKDIR /go/src/github.com/exchangeCC
 COPY . .
 
 RUN go get -d -v ./...
 RUN go install -v ./...
 
 EXPOSE 9999
-CMD ["chaincode-external"]
+CMD ["exchangeCC"]
