--- a/share-pvc-template.yaml
+++ b/share-pvc-template.yaml
@@ -1,5 +1,5 @@
 kind: Template
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 metadata:
   name: "share-pvc-template"
 ## PARAMETRES
@@ -12,9 +12,9 @@ objects:
   - apiVersion: v1
     kind: Pod
     metadata:
-      name: task-pv-pod
+      name: share-pvc-pod
       labels:
-        name: task-pv-pod
+        name: share-pvc-pod
         docker-registry: default
     spec:
       volumes:
@@ -34,9 +34,9 @@ objects:
   - apiVersion: v1
     kind: Service
     metadata:
-      name: task-pv-pod-service
+      name: share-pvc-pod-service
       labels:
-        run: task-pv-pod
+        run: share-pvc-pod
     spec:
       type: NodePort
       ports:
@@ -50,10 +50,10 @@ objects:
   - apiVersion: v1
     kind: Route
     metadata:
-      name: task-pv-pod-route
+      name: share-pvc-pod-route
     spec:
       to:
         kind: Service
-        name: task-pv-pod-service
+        name: share-pvc-pod-service
       tls:
         termination: edge
