--- a/nfs-server.yaml
+++ b/nfs-server.yaml
@@ -1,18 +1,18 @@
-apiVersion: v1
 kind: Pod
+apiVersion: v1
 metadata:
-  name: nfs-server
+  name: nfs-server-pod
+  labels:
+    role: nfs
 spec:
-  containers:
-  - name: nfs-server
-    image: itsthenetwork/nfs-server-alpine:latest
-    volumeMounts:
-    - name: nfs-storage
-      mountPath: /data
-    env:
-      - name: SHARED_DIRECTORY
-        value: /data
-    securityContext:
-        privileged: true
   volumes:
-  - name: nfs-storage
+    - name: nfs-data
+      emptyDir: {}
+  containers:
+    - name: nfs-server-container
+      image: us.icr.io/bouygues-bloc-1600085663464/michelmorat-fr/nfs-server
+      securityContext:
+        privileged: true
+      volumeMounts:
+        - name: nfs-data
+          mountPath: /data
