--- a/template-clibank2.yaml
+++ b/template-clibank2.yaml
@@ -26,7 +26,7 @@ objects:
           - name: clibank2
             image: hyperledger/fabric-tools:2.2.1
             imagePullPolicy: Always
-            command: ["sh", "-c","cd ../fabric &&  chmod +x ../fabric/channelclibank2.sh && ../fabric/channelclibank2.sh && cp /fabric/core.yaml /etc/hyperledger/fabric/core.yaml && sleep 24h"]
+            command: ["sh", "-c","cd ../fabric &&  chmod +x ../fabric/channelclibank2.sh && cp /fabric/core.yaml /etc/hyperledger/fabric/core.yaml && sleep 24h"]
             env:
             - name: FABRIC_CFG_PATH
               value: /fabric/                
