add env variable

--- a/template-clibank1.yaml
+++ b/template-clibank1.yaml
@@ -33,7 +33,7 @@ objects:
             - name: FABRIC_LOGGING_SPEC
               value: "DEBUG"
             - name: CORE_PEER_ID
-              value: "cliBank1"
+              value: "cliBank1"             
             - name: CORE_PEER_ADDRESS
               value: "peer0:7051"
             - name: CORE_PEER_LOCALMSPID
@@ -59,7 +59,20 @@ objects:
             - name: PEER1_BANK1_TLS_CA
               value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank1.banksco.com/tls/ca.crt"
             - name: PEER1_BANK1_PRADDR
-              value: "peer1:7051"           
+              value: "peer1:7051"   
+            - name: PEER1_BANK1_TLS_CA
+              value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank1.banksco.com/tls/ca.crt"
+            - name: PEER1_BANK1_PRADDR
+              value: "peer1:7051"  
+            - name: PEER2_BANK2_TLS_CA
+              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer2.bank2.banksco.com/tls/ca.crt"  
+            - name: PEER2_BANK2_PRADDR
+              value: "peer2:7051"                
+            - name: PEER3_BANK2_TLS_CA
+              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer3.bank2.banksco.com/tls/ca.crt"  
+            - name: PEER3_BANK2_PRADDR
+              value: "peer3:7051"
+                     
             volumeMounts:
               - mountPath: /fabric
                 name: fabricfiles
