--- a/config/configtx.yaml
+++ b/config/configtx.yaml
@@ -64,7 +64,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0
+            - Host: peer0-bank1
               Port: 7051
 
     - &Bank2
@@ -94,7 +94,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer2
+            - Host: peer2-bank2
               Port: 7051
 
 
