--- a/all-peers-onetemplate.yaml
+++ b/all-peers-onetemplate.yaml
@@ -24,7 +24,10 @@ objects:
             claimName: fabric-pvc
         - name: peer0file
           persistentVolumeClaim:
-            claimName: peer0-pvc              
+            claimName: peer0-pvc        
+        - name: couch0file
+          persistentVolumeClaim:
+            claimName: couch0-pvc                     
         containers: 
           - name: couchdb
             image: hyperledger/fabric-couchdb:latest
@@ -34,7 +37,10 @@ objects:
             - name: COUCHDB_PASSWORD
               value: "password"        
             ports:
-              - containerPort: 5984                    
+              - containerPort: 5984       
+            volumeMounts:
+              - mountPath: /opt/couchdb/data
+                name: couch0file                          
           - name: peer0-bank1-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
@@ -102,7 +108,17 @@ objects:
       requests:
         storage: 1Gi
     storageClassName: ibmc-block-silver 
-
+- kind: PersistentVolumeClaim
+  apiVersion: v1
+  metadata:
+    name: couch0-pvc 
+  spec:
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: 1Gi
+    storageClassName: ibmc-block-silver 
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -122,7 +138,10 @@ objects:
             claimName: fabric-pvc
         - name: peer1file
           persistentVolumeClaim:
-            claimName: peer1-pvc              
+            claimName: peer1-pvc   
+        - name: couch1file
+          persistentVolumeClaim:
+            claimName: couch1-pvc                          
         containers:
           - name: couchdb
             image: hyperledger/fabric-couchdb:latest
@@ -133,6 +152,9 @@ objects:
               value: "password"        
             ports:
               - containerPort: 5984          
+            volumeMounts:
+              - mountPath: /opt/couchdb/data
+                name: couch1file                     
           - name: peer1-bank1-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
@@ -202,7 +224,17 @@ objects:
       requests:
         storage: 1Gi
     storageClassName: ibmc-block-gold 
-
+- kind: PersistentVolumeClaim
+  apiVersion: v1
+  metadata:
+    name: couch1-pvc 
+  spec:
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: 1Gi
+    storageClassName: ibmc-block-silver 
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -222,7 +254,10 @@ objects:
             claimName: fabric-pvc
         - name: peer2file
           persistentVolumeClaim:
-            claimName: peer2-pvc               
+            claimName: peer2-pvc   
+        - name: couch2file
+          persistentVolumeClaim:
+            claimName: couch2-pvc                           
         containers:   
           - name: couchdb
             image: hyperledger/fabric-couchdb:latest
@@ -232,7 +267,10 @@ objects:
             - name: COUCHDB_PASSWORD
               value: "password"        
             ports:
-              - containerPort: 5984          
+              - containerPort: 5984        
+            volumeMounts:
+              - mountPath: /opt/couchdb/data
+                name: couch2file                       
           - name: peer0-bank2-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
@@ -302,7 +340,17 @@ objects:
       requests:
         storage: 1Gi
     storageClassName: ibmc-block-gold 
-
+- kind: PersistentVolumeClaim
+  apiVersion: v1
+  metadata:
+    name: couch2-pvc 
+  spec:
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: 1Gi
+    storageClassName: ibmc-block-silver 
 
 - apiVersion: v1
   kind: DeploymentConfig
@@ -324,6 +372,9 @@ objects:
         - name: peer3file
           persistentVolumeClaim:
             claimName: peer3-pvc        
+        - name: couch3file
+          persistentVolumeClaim:
+            claimName: couch3-pvc               
         containers:        
           - name: couchdb
             image: hyperledger/fabric-couchdb:latest
@@ -333,7 +384,10 @@ objects:
             - name: COUCHDB_PASSWORD
               value: "password"        
             ports:
-              - containerPort: 5984          
+              - containerPort: 5984       
+            volumeMounts:
+              - mountPath: /opt/couchdb/data
+                name: couch3file                        
           - name: peer1-bank2-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
@@ -403,4 +457,14 @@ objects:
       requests:
         storage: 10Gi
     storageClassName: ibmc-block-gold 
-
+- kind: PersistentVolumeClaim
+  apiVersion: v1
+  metadata:
+    name: couch3-pvc 
+  spec:
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: 1Gi
+    storageClassName: ibmc-block-gold 
