--- a/all-peers-onetemplate.yaml
+++ b/all-peers-onetemplate.yaml
@@ -51,9 +51,9 @@ objects:
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
-                value: "admin"
+                value: ${COUCHDB_USERNAME}
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-                value: "password"
+                value: ${COUCHDB_PASSWORD}
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS
                 value: "127.0.0.1:5984"                
               - name: CORE_PEER_CHAINCODELISTENADDRESS
@@ -107,7 +107,7 @@ objects:
     resources:
       requests:
         storage: 1Gi
-    storageClassName: ibmc-block-silver 
+    storageClassName: ${STORAGECLASS_NAME} 
 - kind: PersistentVolumeClaim
   apiVersion: v1
   metadata:
@@ -118,7 +118,7 @@ objects:
     resources:
       requests:
         storage: 1Gi
-    storageClassName: ibmc-block-silver 
+    storageClassName: ${STORAGECLASS_NAME}  
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -165,9 +165,9 @@ objects:
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
-                value: "admin"
+                value: ${COUCHDB_USERNAME}
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-                value: "password"
+                value: ${COUCHDB_PASSWORD}
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS
                 value: "127.0.0.1:5984"                 
               - name: CORE_PEER_CHAINCODELISTENADDRESS
@@ -223,7 +223,7 @@ objects:
     resources:
       requests:
         storage: 1Gi
-    storageClassName: ibmc-block-gold 
+    storageClassName: ${STORAGECLASS_NAME} 
 - kind: PersistentVolumeClaim
   apiVersion: v1
   metadata:
@@ -234,7 +234,7 @@ objects:
     resources:
       requests:
         storage: 1Gi
-    storageClassName: ibmc-block-silver 
+    storageClassName: ${STORAGECLASS_NAME} 
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -281,9 +281,9 @@ objects:
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
-                value: "admin"
+                value: ${COUCHDB_USERNAME}
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-                value: "password"
+                value: ${COUCHDB_PASSWORD}
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS
                 value: "127.0.0.1:5984"                
               - name: CORE_PEER_CHAINCODELISTENADDRESS
@@ -339,7 +339,7 @@ objects:
     resources:
       requests:
         storage: 1Gi
-    storageClassName: ibmc-block-gold 
+    storageClassName: ${STORAGECLASS_NAME} 
 - kind: PersistentVolumeClaim
   apiVersion: v1
   metadata:
@@ -350,7 +350,7 @@ objects:
     resources:
       requests:
         storage: 1Gi
-    storageClassName: ibmc-block-silver 
+    storageClassName: ${STORAGECLASS_NAME} 
 
 - apiVersion: v1
   kind: DeploymentConfig
@@ -394,23 +394,23 @@ objects:
             command: ["sh","-c","rm  /etc/hyperledger/fabric/core.yaml && cp  /fabric/core.yaml /etc/hyperledger/fabric/ && peer node start"]
             env: 
               - name: CORE_PEER_ADDRESS
-                value: "peer3:7051"       
+                value: "peer3-bank2:7051"       
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
-                value: "admin"
+                value: ${COUCHDB_USERNAME} 
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-                value: "password"
+                value: ${COUCHDB_PASSWORD}
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS
                 value: "127.0.0.1:5984"                     
               - name: CORE_PEER_CHAINCODELISTENADDRESS
                 value: "localhost:7052"                                        
               - name: CORE_PEER_ID
-                value: "peer3"
+                value: "peer3-bank2"
               - name: CORE_PEER_GOSSIP_EXTERNALENDPOINT
-                value: "peer3:7051"
+                value: "peer3-bank2:7051"
               - name: CORE_PEER_GOSSIP_BOOTSTRAP
-                value: "peer3:7051"                
+                value: "peer3-bank2:7051"                
               - name: FABRIC_LOGGING_SPEC
                 value: "info"
               - name: CORE_PEER_LOCALMSPID
@@ -456,7 +456,7 @@ objects:
     resources:
       requests:
         storage: 10Gi
-    storageClassName: ibmc-block-gold 
+    storageClassName: ${STORAGECLASS_NAME} 
 - kind: PersistentVolumeClaim
   apiVersion: v1
   metadata:
@@ -467,4 +467,18 @@ objects:
     resources:
       requests:
         storage: 1Gi
-    storageClassName: ibmc-block-gold 
+    storageClassName: ${STORAGECLASS_NAME} 
+
+parameters:
+- description: Value for username
+  displayName: username_couchdb
+  name: COUCHDB_USERNAME
+  required: true
+- description: Value for password
+  displayName: password_couchdb
+  name: COUCHDB_PASSWORD
+  required: true  
+- description: Value for username
+  displayName: storage class name
+  name: STORAGECLASS_NAME
+  required: true  
