--- a/param-init.env
+++ b/param-init.env
@@ -1,4 +1,4 @@
-PROJECT=choroukamahri
+PROJECT=xxxxxxxxxxxx
 VOLUME_SIZE=1Gi
 STORAGE_CLASS=ibmc-file-bronze
 NAMESPACE =bouygues-bloc-1600085663464
