--- a/configtx.yaml
+++ b/configtx.yaml
@@ -234,7 +234,9 @@ Orderer: &OrdererDefaults
     # Available types are "solo" and "kafka"
     OrdererType: solo
     Addresses:
-        - orderer.banksco.com:7050
+        - orderer0.banksco.com:7050
+        - orderer1.banksco.com:7050
+        - orderer2.banksco.com:7050
     # Batch Timeout: The amount of time to wait before creating a batch
     BatchTimeout: 2s
     # Batch Size: Controls the number of messages batched into a block
